Adds en.json + start of refactors to TranslatedText component.

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -1,5 +1,12 @@
 {
   "translation": {
-    "welcome": "Welcome to Domits!"
+    "beds": "Bed(s)",
+    "bathrooms": "Bathroom(s)",
+    "bedrooms": "Bedroom(s)",
+    "guests": "Guest(s)",
+    "per night": "per night",
+    "bookings": "Bookings",
+    "logout": "Logout",
+    "delete account": "Delete account"
   }
 }
