--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -7,6 +7,7 @@
     "per night": "per night",
     "bookings": "Bookings",
     "logout": "Logout",
-    "delete account": "Delete account"
+    "delete account": "Delete account",
+    "language": "Language"
   }
 }
