--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -6,8 +6,13 @@
     "guests": "Guest(s)",
     "per night": "per night",
     "bookings": "Bookings",
+    "book": "Book",
     "logout": "Logout",
     "delete account": "Delete account",
-    "language": "Language"
+    "language": "Language",
+    "amenities": "Amenities",
+    "show all amenities": "Show all amenities",
+    "hosted by": "Hosted by",
+    "what does this place have to offer?": "What does this place have to offer?"
   }
 }
