--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -1,4 +1,18 @@
 {
   "translation": {
+    "beds": "Bed(den)",
+    "bathrooms": "Badkamer(s)",
+    "bedrooms": "Slaapkamer(s)",
+    "guests": "Gast(en)",
+    "per night": "per nacht",
+    "bookings": "Boekingen",
+    "book": "Boek",
+    "logout": "Uitloggen",
+    "delete account": "Verwijder account",
+    "language": "Taal",
+    "amenities": "Voorzieningen",
+    "show all amenities": "Toon alle voorzieningen",
+    "hosted by": "Aangeboden door",
+    "what does this place have to offer?": "Wat voor voorzieningen biedt deze plek?"
   }
 }
