Adds LanguageSelector testing

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -8,6 +8,7 @@
     "bookings": "Bookings",
     "logout": "Logout",
     "delete account": "Delete account",
-    "language": "Language"
+    "language": "Language",
+    "select a language": "Select a language"
   }
 }
