--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -8,6 +8,7 @@
     "bookings": "Boekingen",
     "logout": "Uitloggen",
     "delete account": "Verwijder account",
-    "language": "Taal"
+    "language": "Taal",
+    "select a language": "Kies een taal"
   }
 }
