--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -15,6 +15,7 @@
     "show all amenities": "Show all amenities",
     "hosted by": "Hosted by",
     "what does this place have to offer?": "What does this place have to offer?",
-    "loading": "Loading"
+    "loading": "Loading",
+    "contact": "Contact"
   }
 }
