--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -15,6 +15,7 @@
     "show all amenities": "Toon alle voorzieningen",
     "hosted by": "Aangeboden door",
     "what does this place have to offer?": "Wat voor voorzieningen biedt deze plek?",
-    "loading": "Aan het laden van"
+    "loading": "Aan het laden van",
+    "contact": "Contact"
   }
 }
