Add start of implementation of the property api

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -1,9 +1,9 @@
 {
   "translation": {
-    "beds": "Bed(s)",
-    "bathrooms": "Bathroom(s)",
-    "bedrooms": "Bedroom(s)",
-    "guests": "Guest(s)",
+    "Beds": "Bed(s)",
+    "Bathrooms": "Bathroom(s)",
+    "Bedrooms": "Bedroom(s)",
+    "Guests": "Guest(s)",
     "per night": "per night",
     "bookings": "Bookings",
     "book": "Book",
