--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -1,9 +1,9 @@
 {
   "translation": {
-    "beds": "Bed(den)",
-    "bathrooms": "Badkamer(s)",
-    "bedrooms": "Slaapkamer(s)",
-    "guests": "Gast(en)",
+    "Beds": "Bed(den)",
+    "Bathrooms": "Badkamer(s)",
+    "Bedrooms": "Slaapkamer(s)",
+    "Guests": "Gast(en)",
     "per night": "per nacht",
     "bookings": "Boekingen",
     "book": "Boek",
