Implements feedback by Raman

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -4,18 +4,16 @@
     "Bathrooms": "Bathroom(s)",
     "Bedrooms": "Bedroom(s)",
     "Guests": "Guest(s)",
-    "per night": "per night",
-    "bookings": "Bookings",
-    "book": "Book",
-    "logout": "Logout",
-    "delete account": "Delete account",
-    "language": "Language",
-    "select a language": "Select a language",
-    "amenities": "Amenities",
-    "show all amenities": "Show all amenities",
-    "hosted by": "Hosted by",
-    "what does this place have to offer?": "What does this place have to offer?",
-    "loading": "Loading",
-    "contact": "Contact"
+    "Per night": "per night",
+    "Bookings": "Bookings",
+    "Book": "Book",
+    "Logout": "Logout",
+    "Delete account": "Delete account",
+    "Language": "Language",
+    "Select a language": "Select a language",
+    "Amenities": "Amenities",
+    "Show all amenities": "Show all amenities",
+    "Hosted by": "Hosted by",
+    "What does this place have to offer?": "What does this place have to offer?"
   }
 }
