--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -4,18 +4,16 @@
     "Bathrooms": "Badkamer(s)",
     "Bedrooms": "Slaapkamer(s)",
     "Guests": "Gast(en)",
-    "per night": "per nacht",
-    "bookings": "Boekingen",
-    "book": "Boek",
-    "logout": "Uitloggen",
-    "delete account": "Verwijder account",
-    "language": "Taal",
-    "select a language": "Kies een taal",
-    "amenities": "Voorzieningen",
-    "show all amenities": "Toon alle voorzieningen",
-    "hosted by": "Aangeboden door",
-    "what does this place have to offer?": "Wat voor voorzieningen biedt deze plek?",
-    "loading": "Aan het laden van",
-    "contact": "Contact"
+    "Per night": "per nacht",
+    "Bookings": "Boekingen",
+    "Book": "Boek",
+    "Logout": "Uitloggen",
+    "Delete account": "Verwijder account",
+    "Language": "Taal",
+    "Select a language": "Kies een taal",
+    "Amenities": "Voorzieningen",
+    "Show all amenities": "Toon alle voorzieningen",
+    "Hosted by": "Aangeboden door",
+    "What does this place have to offer?": "Wat voor voorzieningen biedt deze plek?"
   }
 }
