Refactors homescreen to align more with figma design. Also adds country filter (with pagination)

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -14,6 +14,7 @@
     "Amenities": "Amenities",
     "Show all amenities": "Show all amenities",
     "Hosted by": "Hosted by",
-    "What does this place have to offer?": "What does this place have to offer?"
+    "What does this place have to offer?": "What does this place have to offer?",
+    "Where to": "What country are you visiting?"
   }
 }
