--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -14,6 +14,7 @@
     "Amenities": "Voorzieningen",
     "Show all amenities": "Toon alle voorzieningen",
     "Hosted by": "Aangeboden door",
-    "What does this place have to offer?": "Wat voor voorzieningen biedt deze plek?"
+    "What does this place have to offer?": "Wat voor voorzieningen biedt deze plek?",
+    "Where to": "Welk land gaat u bezoeken?"
   }
 }
