Adds translation and final styling in styles directory

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -15,6 +15,7 @@
     "Show all amenities": "Show all amenities",
     "Hosted by": "Hosted by",
     "What does this place have to offer?": "What does this place have to offer?",
-    "Where to": "What country are you visiting?"
+    "Where to": "What country are you visiting?",
+    "No property found.": "No properties found."
   }
 }
