--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -15,6 +15,7 @@
     "Show all amenities": "Toon alle voorzieningen",
     "Hosted by": "Aangeboden door",
     "What does this place have to offer?": "Wat voor voorzieningen biedt deze plek?",
-    "Where to": "Welk land gaat u bezoeken?"
+    "Where to": "Welk land gaat u bezoeken?",
+    "No property found.": "Geen accommodaties gevonden."
   }
 }
