--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -5,6 +5,7 @@
     "Bedrooms": "Bedroom(s)",
     "Guests": "Guest(s)",
     "Per night": "per night",
+    "Nights": "Nights",
     "Bookings": "Bookings",
     "Book": "Book",
     "Logout": "Logout",
@@ -16,6 +17,21 @@
     "Hosted by": "Hosted by",
     "What does this place have to offer?": "What does this place have to offer?",
     "Where to": "What country are you visiting?",
-    "No property found.": "No properties found."
+    "No property found.": "No properties found.",
+    "Dates": "Dates",
+    "Cleaning fee": "Cleaning fee",
+    "Domits service fee": "Domits service fee",
+    "Total (excl. tax)": "Total (excl. tax)",
+    "Confirm & Pay": "Confirm & Pay",
+    "Payment confirmed": "Payment confirmed!",
+    "Your payment has been confirmed": "Your payment has been confirmed.",
+    "Payment cancelled": "Payment cancelled.",
+    "Something went wrong during payment": "Something went wrong during payment.",
+    "View booking": "View booking",
+    "Try Again": "Try Again",
+    "If you wish to cancel your booking": "If you wish to cancel your booking",
+    "Press": "press",
+    "Here": "Here",
+    "Price details": "Price details"
   }
 }
