--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -5,6 +5,7 @@
     "Bedrooms": "Slaapkamer(s)",
     "Guests": "Gast(en)",
     "Per night": "per nacht",
+    "Nights": "Nachten",
     "Bookings": "Boekingen",
     "Book": "Boek",
     "Logout": "Uitloggen",
@@ -16,6 +17,21 @@
     "Hosted by": "Aangeboden door",
     "What does this place have to offer?": "Wat voor voorzieningen biedt deze plek?",
     "Where to": "Welk land gaat u bezoeken?",
-    "No property found.": "Geen accommodaties gevonden."
+    "No property found.": "Geen accommodaties gevonden.",
+    "Dates": "Datums",
+    "Cleaning fee": "Schoonmaak kosten",
+    "Domits service fee": "Domits service kosten",
+    "Total (excl. tax)": "Totaal (excl. btw)",
+    "Confirm & Pay": "Bevestigen & Betalen",
+    "Payment confirmed": "Betaling voltooid!",
+    "Your payment has been confirmed": "Uw betaling is verwerkt.",
+    "Payment cancelled": "Betaling geannuleerd.",
+    "Something went wrong during payment": "Er is iets fout gegaan tijdens het verwerken van de betaling.",
+    "View booking": "Zie booking in",
+    "Try Again": "Probeer Opnieuw",
+    "If you wish to cancel your booking": "Als u uw boeking wil annuleren",
+    "Press": "klik",
+    "Here": "Hier",
+    "Price details": "Kosten"
   }
 }
