Finalize original structure of singleBookingOverview

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -23,6 +23,7 @@
     "Domits service fee": "Domits service fee",
     "Total (excl. tax)": "Total (excl. tax)",
     "Confirm & Pay": "Confirm & Pay",
+    "Pay": "Pay",
     "Payment confirmed": "Payment confirmed!",
     "Your payment has been confirmed": "Your payment has been confirmed.",
     "Payment cancelled": "Payment cancelled.",
