--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -23,6 +23,7 @@
     "Domits service fee": "Domits service kosten",
     "Total (excl. tax)": "Totaal (excl. btw)",
     "Confirm & Pay": "Bevestigen & Betalen",
+    "Pay": "Betaal",
     "Payment confirmed": "Betaling voltooid!",
     "Your payment has been confirmed": "Uw betaling is verwerkt.",
     "Payment cancelled": "Betaling geannuleerd.",
