✨ Translation on Register screen
Added translation text for English and Dutch on register.js and added a button to change the language on the register screen.

--- a/app/Domits/src/features/translation/store/en.json
+++ b/app/Domits/src/features/translation/store/en.json
@@ -16,6 +16,28 @@
     "Hosted by": "Hosted by",
     "What does this place have to offer?": "What does this place have to offer?",
     "Where to": "What country are you visiting?",
-    "No property found.": "No properties found."
+    "No property found.": "No properties found.",
+    "Create an Account on Domits": "Create an Account on Domits",
+    "First Name": "First Name",
+    "Last Name": "Last Name",
+    "First name can't be empty.": "First name can't be empty.",
+    "First name must be at least 2 characters.": "First name must be at least 2 characters.",
+    "Last name can't be empty.": "Last name can't be empty.",
+    "Last name must be at least 2 characters.": "Last name must be at least 2 characters.",
+    "Password": "Password",
+    "Password Strength": "Password Strength",
+    "Requirements": "Requirements",
+    "Sign up as a host": "Sign up as a host",
+    "Sign up": "Sign up",
+    "First name is not valid.": "First name is not valid.",
+    "Last name is not valid.": "Last name is not valid.",
+    "Email is not valid.": "Email is not valid.",
+    "Password must be stronger.": "Password must be stronger.",
+    "At least 8 characters": "At least 8 characters",
+    "At least 1 uppercase letter": "At least 1 uppercase letter",
+    "At least 1 number": "At least 1 number",
+    "At least 1 special character": "At least 1 special character",
+    "Email can't be empty.": "Email can't be empty.",
+    "Does not follow the email format example@mail.com": "Does not follow the email format example@mail.com"
   }
 }
