--- a/app/Domits/src/features/translation/store/nl.json
+++ b/app/Domits/src/features/translation/store/nl.json
@@ -16,6 +16,28 @@
     "Hosted by": "Aangeboden door",
     "What does this place have to offer?": "Wat voor voorzieningen biedt deze plek?",
     "Where to": "Welk land gaat u bezoeken?",
-    "No property found.": "Geen accommodaties gevonden."
+    "No property found.": "Geen accommodaties gevonden.",
+    "Create an Account on Domits": "Maak een Account op Domits aan",
+    "First Name": "Voornaam",
+    "Last Name": "Achternaam",
+    "First name can't be empty.": "Voornaam kan niet leeg zijn.",
+    "First name must be at least 2 characters.": "Voornaam moet tenminste 2 karakters zijn.",
+    "Last name can't be empty.": "Achternaam kan niet leeg zijn.",
+    "Last name must be at least 2 characters.": "Achternaam moet tenminste 2 karakters zijn.",
+    "Password": "Wachtwoord",
+    "Password Strength": "Wachtwoord Sterkte",
+    "Requirements": "Eisen",
+    "Sign up as a host": "Aanmelden als host",
+    "Sign up": "Aanmelden",
+    "First name is not valid.": "Voornaam is niet geldig.",
+    "Last name is not valid.": "Achternaam is niet geldig.",
+    "Email is not valid.": "Email is niet geldig.",
+    "Password must be stronger.": "Wachtwoord moet sterker zijn.",
+    "At least 8 characters": "Tenminste 8 karakters",
+    "At least 1 uppercase letter": "Tenminste 1 hoofdletter",
+    "At least 1 number": "Tenminste 1 nummer",
+    "At least 1 special character": "Tenminste 1 speciaal karakter",
+    "Email can't be empty.": "Email kan niet leeg zijn.",
+    "Does not follow the email format example@mail.com": "Volgt niet het email formaat example@mail.com"
   }
 }
