PR landing+register screen

--- a/frontend/app/Domits/src/features/translation/store/en.json
+++ b/frontend/app/Domits/src/features/translation/store/en.json
@@ -31,12 +31,30 @@
     "View booking": "View booking",
     "Try Again": "Try Again",
     "If you wish to cancel your booking": "If you wish to cancel your booking",
-    "No bookings found.": "No bookings found.",
     "Press": "press",
     "Here": "Here",
     "Price details": "Price details",
-    "Property information unavailable.": "Property information unavailable.",
-    "Failed to fetch property matching your booking.": "Failed to fetch property matching your booking.",
-    "Period:": "Period:"
+    "Create an Account on Domits": "Create an Account on Domits",
+    "First Name": "First Name",
+    "Last Name": "Last Name",
+    "First name can't be empty.": "First name can't be empty.",
+    "First name must be at least 2 characters.": "First name must be at least 2 characters.",
+    "Last name can't be empty.": "Last name can't be empty.",
+    "Last name must be at least 2 characters.": "Last name must be at least 2 characters.",
+    "Password": "Password",
+    "Password Strength": "Password Strength",
+    "Requirements": "Requirements",
+    "Sign up as a host": "Sign up as a host",
+    "Sign up": "Sign up",
+    "First name is not valid.": "First name is not valid.",
+    "Last name is not valid.": "Last name is not valid.",
+    "Email is not valid.": "Email is not valid.",
+    "Password must be stronger.": "Password must be stronger.",
+    "At least 8 characters": "At least 8 characters",
+    "At least 1 uppercase letter": "At least 1 uppercase letter",
+    "At least 1 number": "At least 1 number",
+    "At least 1 special character": "At least 1 special character",
+    "Email can't be empty.": "Email can't be empty.",
+    "Does not follow the email format example@mail.com": "Does not follow the email format example@mail.com"
   }
 }
