--- a/frontend/app/Domits/src/features/translation/store/nl.json
+++ b/frontend/app/Domits/src/features/translation/store/nl.json
@@ -31,12 +31,30 @@
     "View booking": "Zie booking in",
     "Try Again": "Probeer Opnieuw",
     "If you wish to cancel your booking": "Als u uw boeking wil annuleren",
-    "No bookings found.": "Geen boekingen gevonden.",
     "Press": "klik",
     "Here": "Hier",
     "Price details": "Kosten",
-    "Property information unavailable.": "Accommodatie informatie niet beschikbaar.",
-    "Failed to fetch property matching your booking.": "Er is iets fout gegaan tijdens het zoeken van de accommodatie.",
-    "Period:": "Periode:"
+    "Create an Account on Domits": "Maak een Account op Domits aan",
+    "First Name": "Voornaam",
+    "Last Name": "Achternaam",
+    "First name can't be empty.": "Voornaam kan niet leeg zijn.",
+    "First name must be at least 2 characters.": "Voornaam moet tenminste 2 karakters zijn.",
+    "Last name can't be empty.": "Achternaam kan niet leeg zijn.",
+    "Last name must be at least 2 characters.": "Achternaam moet tenminste 2 karakters zijn.",
+    "Password": "Wachtwoord",
+    "Password Strength": "Wachtwoord Sterkte",
+    "Requirements": "Eisen",
+    "Sign up as a host": "Aanmelden als host",
+    "Sign up": "Aanmelden",
+    "First name is not valid.": "Voornaam is niet geldig.",
+    "Last name is not valid.": "Achternaam is niet geldig.",
+    "Email is not valid.": "Email is niet geldig.",
+    "Password must be stronger.": "Wachtwoord moet sterker zijn.",
+    "At least 8 characters": "Tenminste 8 karakters",
+    "At least 1 uppercase letter": "Tenminste 1 hoofdletter",
+    "At least 1 number": "Tenminste 1 nummer",
+    "At least 1 special character": "Tenminste 1 speciaal karakter",
+    "Email can't be empty.": "Email kan niet leeg zijn.",
+    "Does not follow the email format example@mail.com": "Volgt niet het email formaat example@mail.com"
   }
 }
